--- a/1. Variabili, stringhe e numeri.ipynb
+++ b/1. Variabili, stringhe e numeri.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "Info\n",
     "---\n",
-    "Questo tutorial è ispirato a http://introtopython.org.\n",
+    "La parte introduttiva di questo tutorial è ispirata a http://introtopython.org.\n",
     "\n",
     "Su https://docs.python.org/3 trovate la documentazione ufficiale del linguaggio Python.\n",
     "\n",
@@ -134,7 +134,7 @@
    "source": [
     "Qualche tipo: stringhe e numeri\n",
     "---\n",
-    "Python intuisce da solo di che *tipo* è una variabile, in base a come questa viene dichiarata. Ci sono diversi tipi *built-in* e il programmatore può definirne di nuovi."
+    "Python intuisce da solo di che *tipo* è una variabile, in base a come questa viene dichiarata. Ci sono diversi tipi *built-in*, e il programmatore può definirne di nuovi."
    ]
   },
   {
@@ -215,7 +215,7 @@
    "source": [
     "### Stringhe\n",
     "\n",
-    "Una *stringa* è un insieme ordinati di caratteri. Può essere contenuta da 'singoli' o \"doppi\" apici, non fa differenza."
+    "Una *stringa* è un insieme ordinato di caratteri. Può essere contenuta da 'singoli' o \"doppi\" apici, non fa differenza."
    ]
   },
   {
@@ -258,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alle stringhe (come a tutti i tipi di variabili) possono essere applicate delle azioni, che si chiamano *metodi* o *funzioni*. Vedremo le funzioni più in dettaglio in seguito."
+    "Alle stringhe (come a tutti i tipi di variabili) possono essere applicate delle azioni, che si chiamano *metodi* o *funzioni*. Vedremo le funzioni più in dettaglio in seguito, nella Lezione 5."
    ]
   },
   {
@@ -318,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le stringhe possono essere combinate tra di loro e stampate."
+    "Le stringhe possono essere combinate tra loro e stampate."
    ]
   },
   {
@@ -409,7 +409,7 @@
    "source": [
     "### Numeri: interi e float\n",
     "\n",
-    "*Interi* e *float* (numeri decimali) sono altri due tipi built-in di Python. "
+    "*int* (numeri interi) e *float* (numeri decimali) sono altri due tipi built-in di Python. "
    ]
   },
   {
@@ -578,7 +578,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L'errore è dovuto al tentativo di somma, dentro le parentesi di print, di stringhe e interi. Si può trasformare l'intero in stringa prima di stamparlo, o lasciarlo fare al metodo print."
+    "L'errore è dovuto al tentativo di somma, dentro le parentesi di print, di una stringa con un intero. Si può trasformare l'intero in stringa prima di stamparlo, o lasciarlo fare al metodo print."
    ]
   },
   {
