--- a/7. Scikit-learn.ipynb
+++ b/7. Scikit-learn.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -342,28 +342,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4.6 3.1 1.5 0.2] 0\n",
-      "[6.9 3.1 5.1 2.3] 2\n",
-      "[6.2 2.2 4.5 1.5] 1\n",
-      "[4.9 3.1 1.5 0.1] 0\n",
-      "[6.5 3.  5.2 2. ] 2\n",
       "[6.7 2.5 5.8 1.8] 2\n",
-      "[7.1 3.  5.9 2.1] 2\n",
-      "[6.4 3.2 5.3 2.3] 2\n",
-      "[6.9 3.1 5.4 2.1] 2\n",
-      "[5.7 4.4 1.5 0.4] 0\n"
+      "[6.4 2.8 5.6 2.1] 2\n",
+      "[6.  2.9 4.5 1.5] 1\n",
+      "[5.1 2.5 3.  1.1] 1\n",
+      "[5.6 2.7 4.2 1.3] 1\n",
+      "[4.4 3.2 1.3 0.2] 0\n",
+      "[5.6 3.  4.1 1.3] 1\n",
+      "[5.5 2.4 3.7 1. ] 1\n",
+      "[7.6 3.  6.6 2.1] 2\n",
+      "[6.3 3.4 5.6 2.4] 2\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.utils import shuffle\n",
+    "from sklearn.utils import shuffle#importo singola funzione\n",
     "\n",
     "X, y = shuffle(X, y)\n",
     "for i, x in enumerate(X[:10]) : print(x, y[i])"
@@ -378,25 +378,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "150 50\n"
+      "150 100\n"
      ]
     }
    ],
    "source": [
-    "n_train = int(X.shape[0]/3)\n",
+    "n_train = int(2*X.shape[0]/3)\n",
     "print(X.shape[0], n_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -415,14 +415,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(50, 4) (100, 4)\n"
+      "(100, 4) (50, 4)\n"
      ]
     }
    ],
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -490,15 +490,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(100,)\n",
-      "(100, 4)\n"
+      "(50,)\n",
+      "(50, 4)\n"
      ]
     }
    ],
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNotFittedError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-30-027404650b81>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mneighbors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mKNeighborsClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-39-027404650b81>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mneighbors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mKNeighborsClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/neighbors/classification.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    143\u001b[0m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'csr'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    144\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 145\u001b[0;31m         \u001b[0mneigh_dist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneigh_ind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkneighbors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    146\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    147\u001b[0m         \u001b[0mclasses_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/neighbors/base.py\u001b[0m in \u001b[0;36mkneighbors\u001b[0;34m(self, X, n_neighbors, return_distance)\u001b[0m\n\u001b[1;32m    325\u001b[0m         \"\"\"\n\u001b[1;32m    326\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_fit_method\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 327\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mNotFittedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Must fit neighbors before querying.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    328\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    329\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mn_neighbors\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNotFittedError\u001b[0m: Must fit neighbors before querying."
@@ -540,14 +540,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy on test set: 0.91\n"
+      "Model accuracy on test set: 0.96\n"
      ]
     }
    ],
@@ -566,14 +566,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy on test set: 0.91\n"
+      "Model accuracy on test set: 0.96\n"
      ]
     }
    ],
@@ -582,15 +582,326 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature scaling\n",
+    "---\n",
+    "Tra gli strumenti di preprocessing di sklearn, troviamo alcuni oggetti pensati per scalare le feature. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### *Esercizio 1*\n",
+    "Estrarre, per ogni feature del dataset iris, i valori minimo e massimo."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sklearn scaling\n",
-    "#model selection\n",
-    "#alberi di decisione\n",
-    "#svm"
+    "#FILL ME"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### *Esercizio 2*\n",
+    "Costruire un array *X_scaled*, contenente gli stessi esempi del dataset di partenza, con le feature scalate tra 0 e 1. Verificare che i valori minimo e massimo di ogni feature siano effettivamente 0 e 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FILL ME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, 1)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "scaler.feature_range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0.]\n",
+      "[1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_scaled = scaler.fit_transform(X)\n",
+    "print(np.min(X_scaled, axis=0))\n",
+    "print(np.max(X_scaled, axis=0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il metodo *fit_transform* opera due passi in sequenza, *fit* e *transform*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0.]\n",
+      "[1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaler.fit(X)\n",
+    "X_scaled = scaler.transform(X)\n",
+    "print(np.min(X_scaled, axis=0))\n",
+    "print(np.max(X_scaled, axis=0))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Attenzione**: anche lo scaling viene addestrato sui dati, come si vede dal nome del metodo fit. In particolare, lo scaler impara i valori minimo e massimo di ogni feature, che userà nella successiva trasformazione.\n",
+    "\n",
+    "In un contesto operativo, questa fase (come per l'addestramento vero e proprio) deve essere svolta senza considerare il test set. Trasformiamo quindi il test set *dopo* aver fittato il train."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Equivalente a:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler.fit(X_train)\n",
+    "X_train_scaled = scaler.transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model accuracy on test set: 0.98\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(X_train_scaled, y_train)\n",
+    "print('Model accuracy on test set:', model.score(X_test_scaled, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ecco tutto quello che ci serve con sklearn per costruire un modello di classificazione a partire da un dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model accuracy on test set: 0.98\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import datasets, neighbors\n",
+    "from sklearn.utils import shuffle\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "#carico il dataset\n",
+    "iris = datasets.load_iris()\n",
+    "X = iris['data']\n",
+    "y = iris['target']\n",
+    "\n",
+    "#separo train e test\n",
+    "X, y = shuffle(X, y, random_state=0)\n",
+    "n_train = int(2*X.shape[0]/3)\n",
+    "X_train, X_test = X[:n_train], X[n_train:]\n",
+    "y_train, y_test = y[:n_train], y[n_train:]\n",
+    "\n",
+    "#scalo le feature tra 0 e 1\n",
+    "scaler = MinMaxScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "#addestro il modello\n",
+    "model = neighbors.KNeighborsClassifier(n_neighbors=3).fit(X_train, y_train)\n",
+    "\n",
+    "#valuto l'accuratezza del modello\n",
+    "print('Model accuracy on test set:', model.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model selection\n",
+    "---\n",
+    "Calibriamo adesso il valore dell'*iper-parametro* $k$. Abbiamo bisogno di una procedura di validazione."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### *Esercizio 3*:\n",
+    "Utilizzando gli oggetti e metodi sklearn visti in precedenza, \n",
+    "\n",
+    "- caricare feature ed etichette del dataset iris\n",
+    "- separare i dati (dopo averli mischiati, con seed=123) in questo modo:\n",
+    "    * 70 esempi per l'addestramento\n",
+    "    * 30 per la validazione\n",
+    "    * 50 per il test\n",
+    "- costruire una griglia di valori di $k$: $\\left[1,2,3,5,10\\right]$\n",
+    "- scegliere il valore della griglia che (produce il modello KNN che) registra l'accuratezza maggiore sul validation set; scalare i dati a partire dal solo training set, come fatto in precedenza\n",
+    "- addestrare nuovamente KNN, usando gli esempi degli insiemi di addestramento e validazione e il valore di $k$ scelto\n",
+    "- calcolare l'accuratezza del modello sull'insieme di test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FILL ME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy with k 1: 0.88\n",
+      "Validation accuracy with k 2: 0.92\n",
+      "Validation accuracy with k 3: 0.86\n",
+      "Validation accuracy with k 5: 0.86\n",
+      "Validation accuracy with k 10: 0.88\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import datasets, neighbors\n",
+    "from sklearn.utils import shuffle\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "#carico il dataset\n",
+    "iris = datasets.load_iris()\n",
+    "X = iris['data']\n",
+    "y = iris['target']\n",
+    "\n",
+    "#separo train e test\n",
+    "X, y = shuffle(X, y, random_state=123)\n",
+    "X_tr, X_val, X_test = X[:50], X[50:100], X[100:150]\n",
+    "y_tr, y_val, y_test = y[:50], y[50:100], y[100:150]\n",
+    "\n",
+    "for k in [1,2,3,5,10]:\n",
+    "    val_acc = neighbors.KNeighborsClassifier(n_neighbors=k).fit(X_tr, y_tr).score(X_val, y_val)\n",
+    "    print('Validation accuracy with k {}: {:.2f}'.format(k, val_acc))                  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy with selected k:0.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "X_train = np.vstack([X_tr, X_val])\n",
+    "y_train = np.hstack([y_tr, y_val])\n",
+    "test_acc = neighbors.KNeighborsClassifier(n_neighbors=2).fit(X_train, y_train).score(X_test, y_test)\n",
+    "print('Test accuracy with selected k: {:.2f}'.format(test_acc)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sklearn.model_selection.train_test_split"
    ]
   },
   {
