lezione 2 definitiva fino a slicing escluso

--- a/2. Liste, cicli e comprensioni.ipynb
+++ b/2. Liste, cicli e comprensioni.ipynb
@@ -8,7 +8,7 @@
     "===\n",
     "- [Liste](#Liste)\n",
     "    - [Dimensione e accesso indicizzato](#Dimensione-e-accesso-indicizzato)\n",
-    "    - [Lista vuota, aggiunta, inserimento, modifica, cancellazione](#Lista-vuota,-aggiunta,-inserimento,-modifica,-cancellazione)\n",
+    "    - [Lista vuota, aggiunta, inserimento, modifica e cancellazione](#Lista-vuota,-aggiunta,-inserimento,-modifica-e-cancellazione)\n",
     "    - [Estrazione e svuotamento](#Estrazione-e-svuotamento)\n",
     "    - [Ricerca](#Ricerca)\n",
     "    - [Ordinamento](#Ordinamento)\n",
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si può accedere ad una lista attraverso un indice intero: la prima posizione ha indice 0, l'ultima (dimensione - 1)."
+    "Si può accedere ad una lista attraverso un indice intero: la prima posizione ha indice 0, l'ultima len-1."
    ]
   },
   {
@@ -137,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lista vuota, aggiunta, inserimento, modifica, cancellazione\n",
+    "Lista vuota, aggiunta, inserimento, modifica e cancellazione\n",
     "---\n",
     "Si può creare una lista vuota e aggiungervi elementi successivamente."
    ]
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gli elementi possono essere modificati in ogni momento."
+    "Gli elementi di una lista possono essere modificati in qualsiasi momento."
    ]
   },
   {
@@ -546,7 +546,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lo stesso vale per i numeri. Per convenzione, l'ordinamento è crescente."
+    "Quanto detto vale anche per le liste numeriche. Per convenzione, l'ordinamento è crescente."
    ]
   },
   {
@@ -615,7 +615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In entrambi i casi, l'argomento *reverse* è *False* per default. Se non si specifica diversamente, l'ordinamento sarà quello naturale (dalla A alla Z, crescente, eccetera).\n",
+    "In entrambi i casi, *reverse* è *False* per default. Se non si specifica diversamente, l'ordinamento sarà quello naturale (dalla A alla Z, crescente, eccetera).\n",
     "\n",
     " Vedremo il significato di True e False nella Lezione 4, e quello degli argomenti opzionali di una funzione nella Lezione 5."
    ]
@@ -655,7 +655,7 @@
    "source": [
     "### *Esercizio 1* \n",
     "\n",
-    "Stampare il voto medio col formato qui sopra, usando il metodo *sum*."
+    "Stampare il voto medio col formato qui sopra, usando (anche) il metodo *sum*."
    ]
   },
   {
@@ -764,7 +764,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L'ordinamento usa in modo dinamico l'operatore '<'."
+    "L'ordinamento usa in modo dinamico l'operatore '<', che non è definito su tutte le coppie di tipi."
    ]
   },
   {
