--- a/2. Liste, cicli e comprensioni.ipynb
+++ b/2. Liste, cicli e comprensioni.ipynb
@@ -794,7 +794,7 @@
    "source": [
     "*Slicing* e copia\n",
     "---\n",
-    "Python permette l'estrazione di sottoliste (slicing) in modo molto compatto. "
+    "Python permette l'estrazione di sottoliste (slicing) in modo compatto. "
    ]
   },
   {
@@ -931,24 +931,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3]\n"
-     ]
-    }
-   ],
-   "source": [
-    "odd_numbers_lower_than_5 = numbers[1:5:2]\n",
-    "print(odd_numbers_lower_than_5)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1056,6 +1038,36 @@
    ],
    "source": [
     "print(original_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una lista non può essere copiata semplicemente assegnandola ad un altro nome di variabile. Così facendo, entrambe le variabili si riferiranno alla stessa lista."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 'a'] [1, 2, 3, 'a']\n",
+      "[1, 2, 3, 4] [1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "original_list = [1,2,3,'a']\n",
+    "same_list = original_list#nuovo riferimento alla stessa lista!\n",
+    "print(original_list, same_list)\n",
+    "\n",
+    "same_list[-1] = 4\n",
+    "print(original_list, same_list)"
    ]
   },
   {
