--- a/2. Liste, cicli e comprensioni.ipynb
+++ b/2. Liste, cicli e comprensioni.ipynb
@@ -1099,7 +1099,7 @@
    "source": [
     "Cicli ***for***\n",
     "===\n",
-    "In programmazione, un *ciclo* è un costrutto in cui si ripetono delle operazioni, per esempio iterando sugli oggetti contenuti in una lista. Si può accedere in modo ordinato agli elementi di una lista attraverso un ciclo *for*.\n",
+    "Nella programmazione, un *ciclo* è un costrutto in cui si ripetono delle operazioni, per esempio iterando sugli oggetti contenuti in una lista. Si può accedere in modo ordinato agli elementi di una lista attraverso un ciclo *for*.\n",
     "\n",
     "**Nota**: in Python l'indentazione è obbligatoria. Questo ambiente di sviluppo semplifica la scrittura di codice indentato correttamente."
    ]
@@ -1244,7 +1244,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(range(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1253,13 +1270,30 @@
        "list"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "type(list(range(10)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(range(10)))"
    ]
   },
   {
@@ -1402,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1425,14 +1459,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La *comprensione* esegue il ciclo in una riga, iterando sugli elementi della lista.\n",
+    "Una *comprensione* esegue il ciclo in una riga, iterando sugli elementi della lista.\n",
     "\n",
     "In questo modo è possibile derivare nuove liste da una nota in modo comodo e compatto. In seguito vedremo di nuovo la potenza di questo costrutto, che rende Python un linguaggio estremamente elegante e leggibile, molto vicino al linguaggio naturale."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1509,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 'Francesco'), (1, 'Elisa'), (2, 'Alessandro'), (3, 'Giovanni'), (4, 'Maria Teresa')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "indexed_names = [(i, n.title()) for i, n in enumerate(names)]\n",
+    "print(indexed_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1549,7 @@
    "source": [
     "*Esercizio 4*\n",
     "---\n",
-    "Ripetere l'esercizio 3 (ignorando la stampa e dividendo per due i nuovi elementi ottenuti elevando al quadrato), utilizzando le comprensioni di liste."
+    "Ripetere l'esercizio 3 (ignorando la stampa ma dividendo per due i nuovi elementi ottenuti elevando al quadrato), utilizzando una comprensione di lista."
    ]
   },
   {
