--- a/3. Dizionari.ipynb
+++ b/3. Dizionari.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "Dizionari\n",
     "===\n",
-    "Spesso gli elementi di una lista hanno un significato particolare. Vogliamo ad esempio costruire un database di utenti: ciascun utente ha un nome, un'età e un sesso.\n",
+    "Spesso gli elementi di una lista hanno un significato particolare. Immaginiamo ad esempio di costruire un database di utenti: ciascun utente ha un nome, un'età e un sesso.\n",
     "\n",
     "Possiamo pensare di realizzare il database come una lista. A sua volta, ogni contatto sarà una lista di informazioni."
    ]
@@ -55,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Immaginiamo di voler visualizzare le informazioni di ogni utente."
+    "Vogliamo visualizzare le informazioni di ogni utente."
    ]
   },
   {
@@ -119,35 +119,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Francesco', 'age': 30, 'sex': 'M'}\n",
-      "{'name': 'Elisa', 'age': 27, 'sex': 'F'}\n"
+      "{'name': 'Francesco', 'age': 30, 'gender': 'M'}\n",
+      "{'name': 'Elisa', 'age': 27, 'gender': 'F'}\n"
      ]
     }
    ],
    "source": [
-    "francesco = {'name':'Francesco', 'age':30, 'sex':'M'}\n",
-    "elisa = {'name':'Elisa', 'age':27, 'sex':'F'}\n",
+    "francesco = {'name':'Francesco', 'age':30, 'gender':'M'}\n",
+    "elisa = {'name':'Elisa', 'age':27, 'gender':'F'}\n",
     "print(francesco)\n",
     "print(elisa)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'Francesco', 'age': 30, 'sex': 'M'}, {'name': 'Elisa', 'age': 27, 'sex': 'F'}]\n"
+      "[{'name': 'Francesco', 'age': 30, 'gender': 'M'}, {'name': 'Elisa', 'age': 27, 'gender': 'F'}]\n"
      ]
     }
    ],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
    ],
    "source": [
     "for user in users:\n",
-    "    print('{}({}) ha {} anni'.format(user['name'], user['sex'], user['age']))"
+    "    print('{}({}) ha {} anni'.format(user['name'], user['gender'], user['age']))"
    ]
   },
   {
@@ -263,7 +263,7 @@
     }
    ],
    "source": [
-    "tel_book['francesco'] = 3289797970#modifica valore di chiave esistente\n",
+    "tel_book['francesco'] = 3289797970#modifica del valore di una chiave esistente\n",
     "print('Il nuovo numero di Francesco è', tel_book['francesco'])"
    ]
   },
@@ -446,7 +446,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se si ordina un dizionario, l'ordinamento sarà fatto sulle chiavi. Questo si può usare per stampare un dizionario in ordine (di chiave)."
+    "Se si ordina un dizionario, l'ordinamento sarà fatto sulle chiavi. Questo si può sfruttare per stampare un dizionario in ordine (di chiave)."
    ]
   },
   {
