--- a/4. If, valori e operatori booleani.ipynb
+++ b/4. If, valori e operatori booleani.ipynb
@@ -30,7 +30,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *if*\n",
+    "*if*\n",
+    "---\n",
     "Attraverso la keyword *if* si testano una o più condizioni."
    ]
   },
@@ -222,12 +223,12 @@
    "source": [
     "Test logici\n",
     "===\n",
-    "Le condizioni testate da if ed elif sono vere (*True*) o false (*False*). In Python, la risposta al test di una condizione è di tipo *booleano*. Vediamo alcune condizioni con esito booleano."
+    "Le condizioni testate da if ed elif sono vere (*True*) o false (*False*). In Python, la risposta al test di una condizione è di tipo *booleano*. Vediamo alcune condizioni booleane."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +247,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a == b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +273,7 @@
        "True"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,23 +314,6 @@
    ],
    "source": [
     "print(type(False))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(a == b)"
    ]
   },
   {
