--- a/5. Funzioni.ipynb
+++ b/5. Funzioni.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -56,22 +56,22 @@
    "source": [
     "users = []#database\n",
     "\n",
-    "francesco = {'name':'Francesco', 'age':30, 'sex':'M'}\n",
+    "francesco = {'name':'Francesco', 'age':30, 'gender':'M'}\n",
     "print('Nome:', francesco['name'])\n",
     "print('Età:', francesco['age'])\n",
-    "print('Sesso:', francesco['sex'])\n",
+    "print('Sesso:', francesco['gender'])\n",
     "users += [francesco]\n",
     "\n",
-    "elisa = {'name':'Elisa', 'age':27, 'sex':'F'}\n",
+    "elisa = {'name':'Elisa', 'age':27, 'gender':'F'}\n",
     "print('\\nNome:', elisa['name'])#'\\n' inserisce un 'a capo'\n",
     "print('Età:', elisa['age'])\n",
-    "print('Sesso:', elisa['sex'])\n",
+    "print('Sesso:', elisa['gender'])\n",
     "users += [elisa]\n",
     "\n",
-    "alessandro = {'name':'Alessandro', 'age':31, 'sex':'M'}\n",
+    "alessandro = {'name':'Alessandro', 'age':31, 'gender':'M'}\n",
     "print('\\nNome:', alessandro['name'])\n",
     "print('Età:', alessandro['age'])\n",
-    "print('Sesso:', alessandro['sex'])\n",
+    "print('Sesso:', alessandro['gender'])\n",
     "users += [alessandro]"
    ]
   },
@@ -83,7 +83,7 @@
     "\n",
     "Sintassi\n",
     "---\n",
-    "Una *funzione* (o *metodo*) è una sequenza di azioni a cui si dà un nome, e che si può *chiamare* all'occorrenza. Abbiamo già visto ed usato alcune funzioni: tra le altre, print, len, title e sorted."
+    "Una *funzione* (o *metodo*) è una sequenza di azioni a cui si dà un nome, e che si può *chiamare* all'occorrenza. Abbiamo già visto ed usato alcune funzioni: tra le altre, print, len, title, round e sorted."
    ]
   },
   {
@@ -112,12 +112,12 @@
     "- **def** è una keyword del linguaggio, come for e if\n",
     "- la definizione deve precedere la chiamata nell'ordine di scrittura del codice\n",
     "\n",
-    "Torniamo al nosto database, e condensiamo in una funzione la stampa delle informazioni di un utente."
+    "Torniamo al nostro database, e condensiamo in una funzione la stampa delle informazioni di un utente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -143,19 +143,19 @@
     "def show_user_info(user):\n",
     "    print('\\nNome:', user['name'])\n",
     "    print('Età:', user['age'])\n",
-    "    print('Sesso:', user['sex'])\n",
+    "    print('Sesso:', user['gender'])\n",
     "    \n",
     "users = []\n",
     "\n",
-    "francesco = {'name':'Francesco', 'age':30, 'sex':'M'}\n",
+    "francesco = {'name':'Francesco', 'age':30, 'gender':'M'}\n",
     "show_user_info(francesco)\n",
     "users += [francesco]\n",
     "\n",
-    "elisa = {'name':'Elisa', 'age':27, 'sex':'F'}\n",
+    "elisa = {'name':'Elisa', 'age':27, 'gender':'F'}\n",
     "show_user_info(elisa)\n",
     "users += [elisa]\n",
     "\n",
-    "alessandro = {'name':'Alessandro', 'age':31, 'sex':'M'}\n",
+    "alessandro = {'name':'Alessandro', 'age':31, 'gender':'M'}\n",
     "show_user_info(alessandro)\n",
     "users += [alessandro]"
    ]
@@ -166,7 +166,10 @@
    "source": [
     "Operatore *\n",
     "---\n",
-    "Il costrutto \\*lista permette di passare una lista ad un metodo, sotto forma di argomenti 'spacchettati'. L'ordine degli elementi della lista deve rispettare quello degli argomenti nella firma del metodo."
+    "Il costrutto\n",
+    "\n",
+    "            *lista          \n",
+    "permette di passare una lista ad un metodo, sotto forma di argomenti 'spacchettati'. L'ordine degli elementi della lista deve rispettare quello degli argomenti nella firma del metodo."
    ]
   },
   {
@@ -186,10 +189,10 @@
     }
    ],
    "source": [
-    "def show_user_info(name, age, sex):\n",
+    "def show_user_info(name, age, gender):\n",
     "    print('\\nNome:', name)\n",
     "    print('Età:', age)\n",
-    "    print('Sesso:', sex)\n",
+    "    print('Sesso:', gender)\n",
     "    \n",
     "francesco = ['Francesco', 30, 'M']\n",
     "show_user_info(*francesco)"
@@ -212,7 +215,7 @@
     }
    ],
    "source": [
-    "michael = {'name':'Michael', 'age':30, 'sex':'M'}\n",
+    "michael = {'name':'Michael', 'age':30, 'gender':'M'}\n",
     "show_user_info(*michael.values())#lista dei valori del dizionario"
    ]
   },
@@ -258,13 +261,13 @@
     "def show_user_info(user_info, email='not available'):\n",
     "    print('\\nNome:', user_info['name'])\n",
     "    print('Età:', user_info['age'])\n",
-    "    print('Sesso:', user_info['sex'])\n",
+    "    print('Sesso:', user_info['gender'])\n",
     "    print('Email:', email)\n",
     "    \n",
-    "francesco = {'name':'Francesco', 'age':30, 'sex':'M'}\n",
+    "francesco = {'name':'Francesco', 'age':30, 'gender':'M'}\n",
     "show_user_info(francesco)\n",
     "\n",
-    "giovanni = {'name':'Giovanni', 'age':68, 'sex':'M'}\n",
+    "giovanni = {'name':'Giovanni', 'age':68, 'gender':'M'}\n",
     "show_user_info(giovanni, email='gio@mail.it')"
    ]
   },
@@ -282,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +316,7 @@
     "---\n",
     "- costruire un database di utenti con campi a piacere\n",
     "- scrivere una funzione che ordina gli utenti per età (dal più piccolo) e chiama show_contact_info per stamparne le info; per ordinare per età crescente, usare il costrutto:\n",
-    "        sorted(users, key = lambda user : user['age']\n",
+    "        sorted(users, key = lambda user : user['age'])\n",
     "- testare il funzionamento con una chiamata"
    ]
   },
@@ -326,7 +329,7 @@
     "def show_user_info(user):\n",
     "    print('\\nNome:', user['name'])\n",
     "    print('Età:', user['age'])\n",
-    "    print('Sesso:', user['sex'])\n",
+    "    print('Sesso:', user['gender'])\n",
     "\n",
     "def show_all_users_by_age(users):\n",
     "    #FILL ME"
@@ -336,14 +339,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nell'esercizio precedente abbiamo usato la keyword *lambda*. In particolare, la funzione sorted accetta un argomento (opzionale) *key* che specifica il criterio in cui gli elementi devono essere ordinati.\n",
+    "Nell'esercizio precedente abbiamo usato la keyword *lambda*. In particolare, la funzione sorted accetta un argomento (opzionale) *key* che specifica il criterio con cui gli elementi devono essere ordinati.\n",
     "\n",
     "Utilizzare lambda, nel nostro esempio, equivale a definire una funzione 'sul posto' che, preso un utente, ne restituisce l'età. Questa viene associata a key, e serve alla funzione sorted come criterio di ordinamento. Quando si tratta di numeri, l'ordinamento è per convenzione crescente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +407,7 @@
    "source": [
     "*Esercizio 2*\n",
     "---\n",
-    "Ripetere l'Esercizio 1, passando alla funzione che stampa tutti i contatti anche il campo in base al quale fare l'ordinamento. Questo deve essere opzionale, e l'ordinamento di default deve essere per nome."
+    "Ripetere l'Esercizio 1, passando alla funzione che stampa tutti i contatti anche il campo in base al quale fare l'ordinamento. Questo deve essere opzionale, e l'ordinamento di default deve essere quello per nome."
    ]
   },
   {
@@ -447,25 +450,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eseguo il prodotto di 10 e 5.\n"
+      "Eseguo il prodotto di 10 e 5.\n",
+      "50\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "50"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -473,7 +467,7 @@
     "    print('Eseguo il prodotto di {} e {}.'.format(a, b))\n",
     "    return a*b\n",
     "\n",
-    "product(10, 5)"
+    "print(product(10, 5))"
    ]
   },
   {
@@ -501,7 +495,7 @@
     "\n",
     "adult_users = []#database\n",
     "\n",
-    "adult_users = show_and_add_if_adult({'name':'Francesco', 'age':30, 'sex':'M'}, adult_users)\n",
+    "adult_users = show_and_add_if_adult({'name':'Francesco', 'age':30, 'gender':'M'}, adult_users)\n",
     "\n",
     "print(adult_users)"
    ]
