avanti con lezione sklearn; aggiunte immagini albero decisione

--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -419,50 +419,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[199 105 118 252  23]\n",
-      "  [ 32 190  83 184 122]\n",
-      "  [ 57  13   5  10 225]\n",
-      "  [250 197  93 184  59]\n",
-      "  [117  25  79 180  51]]\n",
+      "[[[175  37 192 120 181]\n",
+      "  [ 15 114 217 168  95]\n",
+      "  [190 174 175 107 203]\n",
+      "  [250 210 189 229  47]\n",
+      "  [169 110 130 148 160]]\n",
       "\n",
-      " [[166 218  12  71 253]\n",
-      "  [ 96 213 162  37 246]\n",
-      "  [109 119 179 185 218]\n",
-      "  [ 82  81  33 113 108]\n",
-      "  [  6 232 149  92 195]]\n",
+      " [[ 72 194 176 105 244]\n",
+      "  [ 16 250 136 153  28]\n",
+      "  [110  61 159  98   5]\n",
+      "  [ 90 233 151 244 235]\n",
+      "  [136 123  25 225 141]]\n",
       "\n",
-      " [[245 189  26  47  91]\n",
-      "  [191  45  38 157 125]\n",
-      "  [188  14  89 185 189]\n",
-      "  [112  60 206 177  14]\n",
-      "  [118 135   9 231  60]]\n",
+      " [[ 28 168 112 247 165]\n",
+      "  [ 58  69 212 204 153]\n",
+      "  [174  90 164  52  28]\n",
+      "  [ 92 226 183 255 100]\n",
+      "  [190 169 199 242 201]]\n",
       "\n",
       " ...\n",
       "\n",
-      " [[ 33 200 170 220 252]\n",
-      "  [132 159 215 100  26]\n",
-      "  [223  95  49 225 169]\n",
-      "  [115 239 139  32  45]\n",
-      "  [177  33  96  40 235]]\n",
+      " [[148  81 144  29   5]\n",
+      "  [219 118 185  42 248]\n",
+      "  [248 136  94  25  55]\n",
+      "  [135  37  51  90   4]\n",
+      "  [ 66 188  50 109  93]]\n",
       "\n",
-      " [[143 109  15  37  16]\n",
-      "  [111  54  82  78  43]\n",
-      "  [ 95 133 156 128 107]\n",
-      "  [212  79 141  53 137]\n",
-      "  [ 97 102 107 231  45]]\n",
+      " [[ 78 192 135  75 109]\n",
+      "  [ 85  27  48  51  25]\n",
+      "  [135 161 227  71 177]\n",
+      "  [229 240 251 114 152]\n",
+      "  [129  27 187 131 140]]\n",
       "\n",
-      " [[188 153 254 223 233]\n",
-      "  [239 220  14 206  58]\n",
-      "  [182 178  88  74  78]\n",
-      "  [ 94  60  57  99 230]\n",
-      "  [103 111 180 163 213]]]\n"
+      " [[157  25 163 205  31]\n",
+      "  [193 138  83 111 183]\n",
+      "  [ 43 245 163 253 139]\n",
+      "  [ 65  35  44 248 135]\n",
+      "  [ 98  24 148 225 123]]]\n"
      ]
     }
    ],
@@ -473,13 +473,13 @@
     "n_frames = 50\n",
     "n_pixel_x = 5\n",
     "n_pixel_y = 5\n",
-    "movie = rdm.randint(256, size=(n_frames, n_pixel_x, n_pixel_y))\n",
+    "movie = rdm.randint(0, 256, (n_frames, n_pixel_x, n_pixel_y))\n",
     "print(movie)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -496,18 +496,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[135.54 115.88 128.8  120.28 125.7 ]\n",
-      " [143.14 133.44 117.78 127.32 129.2 ]\n",
-      " [125.18 129.34 110.64 129.16 136.16]\n",
-      " [138.04 126.92 131.84 140.36 131.34]\n",
-      " [119.04 123.2  127.08 138.56 143.46]]\n",
+      "[[114.48 110.74 142.62 114.56 123.72]\n",
+      " [124.78 132.6  121.52 111.9  118.92]\n",
+      " [129.82 121.78 113.22 129.1  147.8 ]\n",
+      " [139.24 128.6  149.04 146.88 132.04]\n",
+      " [124.98 124.86 129.32 143.84 112.62]]\n",
       "(5, 5)\n"
      ]
     }
@@ -528,14 +528,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.002138317145509 3.002138317145509\n"
+      "5.0015\n",
+      "5.0015\n",
+      "2.996396470884666 2.996396470884666\n"
      ]
     }
    ],
@@ -545,7 +547,12 @@
     "\n",
     "values = rdm.normal(5, 3, 1000000)\n",
     "\n",
+    "#levo 5 e guardo se ha funzionato\n",
+    "print(round(np.mean(values), 4))\n",
     "values -= 5\n",
+    "print(5 + round(np.mean(values), 4))\n",
+    "\n",
+    "#implemento deviazione std e confronto con np.std\n",
     "residuals = values - np.mean(values)\n",
     "squared_residuals = residuals**2\n",
     "variance = np.sum(squared_residuals) / values.size\n",
@@ -562,14 +569,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Matrice delle feature: [[0.5488135  0.71518937 0.60276338 0.54488318]\n",
+      "Matrice delle feature:\n",
+      " [[0.5488135  0.71518937 0.60276338 0.54488318]\n",
       " [0.4236548  0.64589411 0.43758721 0.891773  ]\n",
       " [0.96366276 0.38344152 0.79172504 0.52889492]\n",
       " [0.56804456 0.92559664 0.07103606 0.0871293 ]\n",
@@ -590,7 +598,7 @@
     "import numpy as np\n",
     "from numpy.linalg import norm\n",
     "\n",
-    "np.random.seed(0)\n",
+    "np.random.seed(0)#fisso il generatore casuale per la riproducibilità dell'esperimento\n",
     "\n",
     "def KNN(k, X, y, x):\n",
     "    distances = norm(X_train - x_new, axis=1)\n",
@@ -602,9 +610,9 @@
     "\n",
     "X_train = np.random.random((7,4))\n",
     "y_train = np.random.randint(0, 2, (7))\n",
-    "x_new = np.random.random(4)\n",
+    "x_new = np.random.random((4,))\n",
     "\n",
-    "print('Matrice delle feature:', X_train)\n",
+    "print('Matrice delle feature:\\n', X_train)\n",
     "\n",
     "print('\\nVettore delle etichette:', y_train)\n",
     "\n",
@@ -1047,6 +1055,74 @@
    "source": [
     "print(norm(scaled_A-scaled_B))\n",
     "print(norm(scaled_A-scaled_C))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7.3\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation accuracy with k 1: 0.88\n",
+      "Validation accuracy with k 2: 0.92\n",
+      "Validation accuracy with k 3: 0.86\n",
+      "Validation accuracy with k 5: 0.86\n",
+      "Validation accuracy with k 10: 0.88\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import datasets, neighbors\n",
+    "from sklearn.utils import shuffle\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "#carico il dataset\n",
+    "iris = datasets.load_iris()\n",
+    "X = iris['data']\n",
+    "y = iris['target']\n",
+    "\n",
+    "#separo train e test\n",
+    "X, y = shuffle(X, y, random_state=123)\n",
+    "X_tr, X_val, X_test = X[:50], X[50:100], X[100:150]\n",
+    "y_tr, y_val, y_test = y[:50], y[50:100], y[100:150]\n",
+    "\n",
+    "for k in [1,2,3,5,10]:\n",
+    "    val_acc = neighbors.KNeighborsClassifier(n_neighbors=k).fit(X_tr, y_tr).score(X_val, y_val)\n",
+    "    print('Validation accuracy with k {}: {:.2f}'.format(k, val_acc))                  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy with selected k: 0.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "X_train = np.vstack([X_tr, X_val])\n",
+    "y_train = np.hstack([y_tr, y_val])\n",
+    "test_acc = neighbors.KNeighborsClassifier(n_neighbors=2).fit(X_train, y_train).score(X_test, y_test)\n",
+    "print('Test accuracy with selected k: {:.2f}'.format(test_acc)) "
    ]
   },
   {
