--- a/7. Scikit-learn.ipynb
+++ b/7. Scikit-learn.ipynb
@@ -7,7 +7,11 @@
     "*Contenuti*\n",
     "===\n",
     "- [Scikit-learn: machine learning con Python](#Scikit-learn:-machine-learning-con-Python)\n",
-    "- [Un modello per la classificazione](#Un-modello-per-la-classificazione)"
+    "    - [Un modello per la classificazione](#Un-modello-per-la-classificazione)\n",
+    "    - [Feature scaling](#Feature-scaling)\n",
+    "        - [Esercizio 1](#Esercizio-1)\n",
+    "        - [Esercizio 2](#Esercizio-2)\n",
+    "    - [Dai dati alla predizione in quindici righe](#Dai-dati-alla-predizione-in-quindici-righe)"
    ]
   },
   {
@@ -22,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Scikit-learn* (o *sklearn*) è uno dei principali strumenti Python per il machine learning ed è la libreria open-source di data science più usata al mondo.\n",
+    "*Scikit-learn* (o *sklearn*) è uno dei principali strumenti Python per il machine learning, ed è la libreria open-source di data science più usata al mondo.\n",
     "\n",
     "Sulla pagina di sklearn, http://scikit-learn.org/stable/, si trovano svariati modelli di machine learning, insieme a strumenti di preprocessing, analisi e visualizzazione dei dati. \n",
     "\n",
@@ -41,7 +45,7 @@
    "source": [
     "Un modello per la classificazione\n",
     "---\n",
-    "Costruiamo un modello $K$-nearest neighbors (KNN) per la classificazione, utilizzando l'implementazione sklearn *KNeighborsClassifier*."
+    "Costruiamo un modello $k$*-nearest neighbors* (KNN) per la classificazione, utilizzando l'implementazione sklearn *KNeighborsClassifier*."
    ]
   },
   {
@@ -754,6 +758,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Dai dati alla predizione in quindici righe\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Ecco tutto quello che ci serve con sklearn per costruire un modello di classificazione a partire da un dataset."
    ]
   },
@@ -836,72 +848,248 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validation accuracy with k 1: 0.88\n",
-      "Validation accuracy with k 2: 0.92\n",
-      "Validation accuracy with k 3: 0.86\n",
-      "Validation accuracy with k 5: 0.86\n",
-      "Validation accuracy with k 10: 0.88\n"
-     ]
-    }
-   ],
    "source": [
-    "from sklearn import datasets, neighbors\n",
-    "from sklearn.utils import shuffle\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "\n",
-    "#carico il dataset\n",
-    "iris = datasets.load_iris()\n",
-    "X = iris['data']\n",
-    "y = iris['target']\n",
-    "\n",
-    "#separo train e test\n",
-    "X, y = shuffle(X, y, random_state=123)\n",
-    "X_tr, X_val, X_test = X[:50], X[50:100], X[100:150]\n",
-    "y_tr, y_val, y_test = y[:50], y[50:100], y[100:150]\n",
-    "\n",
-    "for k in [1,2,3,5,10]:\n",
-    "    val_acc = neighbors.KNeighborsClassifier(n_neighbors=k).fit(X_tr, y_tr).score(X_val, y_val)\n",
-    "    print('Validation accuracy with k {}: {:.2f}'.format(k, val_acc))                  "
+    "Possiamo risparmiare tempo e scrivere ancora meno codice usando il modulo *model_selection*."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test accuracy with selected k:0.96\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "X_train = np.vstack([X_tr, X_val])\n",
-    "y_train = np.hstack([y_tr, y_val])\n",
-    "test_acc = neighbors.KNeighborsClassifier(n_neighbors=2).fit(X_train, y_train).score(X_test, y_test)\n",
-    "print('Test accuracy with selected k: {:.2f}'.format(test_acc)) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sklearn.model_selection.train_test_split"
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 4)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((96, 4), (24, 4), (96,), (24,), (30, 4), (30,))"
+      ]
+     },
+     "execution_count": 245,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=123)\n",
+    "X_tr, X_val, y_tr, y_val = train_test_split(X_train, y_train, test_size=.2, random_state=123)\n",
+    "X_tr.shape, X_val.shape, y_tr.shape, y_val.shape, X_test.shape, y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7.4, 2.8, 6.1, 1.9],\n",
+       "       [6. , 2.2, 5. , 1.5],\n",
+       "       [4.7, 3.2, 1.6, 0.2],\n",
+       "       [5.1, 3.5, 1.4, 0.2],\n",
+       "       [6. , 2.2, 4. , 1. ]])"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train[:5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il modulo model_selection mette anche a disposizione schemi di validazione più complessi, come la $k$*-fold cross-validation* (KFCV)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validated value for k: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier as KNN\n",
+    "from sklearn.model_selection import GridSearchCV as KFCV\n",
+    "\n",
+    "model = KNN()#modello da validare\n",
+    "param_grid = [{'n_neighbors' : [1,2,3,5,10]}]#griglia dei valori degli iperparametri\n",
+    "n_folds = 5\n",
+    "\n",
+    "kfcv = KFCV(model, param_grid, cv=n_folds)\n",
+    "kfcv.fit(X_train, y_train)\n",
+    "best_model = kfcv.best_estimator_\n",
+    "\n",
+    "print('Validated value for k:', best_model.n_neighbors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si può esplorare lo schema di validazione creato attraverso il tipo *GridSearchCV* scrivendo\n",
+    "        \n",
+    "        kfcv.\n",
+    "        \n",
+    "e premendo Tab. In particolare, il campo *cv_results_* contiene il dettaglio sui punteggi ottenuti dai valori degli iperparametri (solo $k$ nel nostro caso) sui vari fold.\n",
+    "\n",
+    "Come al solito, è possibile condensare tutta l'operazione in un'unica riga di codice."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validated value for k: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_model = KFCV(KNN(),\n",
+    "                  param_grid=[{'n_neighbors' : [1,2,3,5,10]}],\n",
+    "                  cv=5).fit(X_train, y_train).best_estimator_\n",
+    "\n",
+    "print('Validated value for k:', best_model.n_neighbors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alberi di decisione\n",
+    "---\n",
+    "Costruiamo adesso un *albero di decisione* (DT) ed utilizziamolo per lo stesso problema di classificazione visto in precedenza."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 268,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy on test set: 0.93\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.tree import DecisionTreeClassifier as DT\n",
+    "\n",
+    "#carico il dataset\n",
+    "iris = load_iris()\n",
+    "X = iris['data']\n",
+    "y = iris['target']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.2, random_state=123)\n",
+    "\n",
+    "model = DT()\n",
+    "model.fit(X_train, y_train)\n",
+    "print('Accuracy on test set: {:.2f}'.format(model.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+      "            max_features=None, max_leaf_nodes=None,\n",
+      "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+      "            min_samples_leaf=1, min_samples_split=2,\n",
+      "            min_weight_fraction_leaf=0.0, presort=False, random_state=2,\n",
+      "            splitter='best')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validated criterion: gini\n",
+      "Validated max depth: 2\n",
+      "Validated model accuracy on test set: 0.97\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_model = KFCV(DT(),\n",
+    "                  param_grid=[{'criterion' : ['gini', 'entropy'],\n",
+    "                               'max_depth' : [2, 3, 5, 10, 50]}],\n",
+    "                  cv=3).fit(X_train, y_train).best_estimator_\n",
+    "\n",
+    "print('Validated criterion:', best_model.criterion)\n",
+    "print('Validated max depth:', best_model.max_depth)\n",
+    "print('Validated model accuracy on test set: {:.2f}'.format(best_model.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "KNN e DT per la regressione\n",
+    "---"
    ]
   },
   {
