--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -1067,37 +1067,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Validation accuracy with k 1: 0.88\n",
-      "Validation accuracy with k 2: 0.92\n",
-      "Validation accuracy with k 3: 0.86\n",
-      "Validation accuracy with k 5: 0.86\n",
-      "Validation accuracy with k 10: 0.88\n"
+      "Validation accuracy with k 1: 0.78\n",
+      "Validation accuracy with k 2: 0.76\n",
+      "Validation accuracy with k 3: 0.62\n",
+      "Validation accuracy with k 5: 0.66\n",
+      "Validation accuracy with k 10: 0.52\n"
      ]
     }
    ],
    "source": [
     "from sklearn import datasets, neighbors\n",
     "from sklearn.utils import shuffle\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "#carico il dataset\n",
-    "iris = datasets.load_iris()\n",
-    "X = iris['data']\n",
-    "y = iris['target']\n",
+    "#Carico il dataset\n",
+    "digits = datasets.load_digits()\n",
+    "X, y = digits['data'], digits['target']\n",
     "\n",
-    "#separo train e test\n",
+    "#Separo train e test\n",
     "X, y = shuffle(X, y, random_state=123)\n",
     "X_tr, X_val, X_test = X[:50], X[50:100], X[100:150]\n",
     "y_tr, y_val, y_test = y[:50], y[50:100], y[100:150]\n",
     "\n",
+    "#Scalo i dati\n",
+    "scaler = StandardScaler()\n",
+    "X_tr = scaler.fit_transform(X_tr)\n",
+    "X_val = scaler.transform(X_val)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "#Valuto accuratezza dei modelli sul set di validazione\n",
     "for k in [1,2,3,5,10]:\n",
     "    val_acc = neighbors.KNeighborsClassifier(n_neighbors=k).fit(X_tr, y_tr).score(X_val, y_val)\n",
     "    print('Validation accuracy with k {}: {:.2f}'.format(k, val_acc))                  "
@@ -1105,24 +1111,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy with selected k: 0.96\n"
+      "Test accuracy with selected k: 0.84\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "X_train = np.vstack([X_tr, X_val])\n",
-    "y_train = np.hstack([y_tr, y_val])\n",
-    "test_acc = neighbors.KNeighborsClassifier(n_neighbors=2).fit(X_train, y_train).score(X_test, y_test)\n",
-    "print('Test accuracy with selected k: {:.2f}'.format(test_acc)) "
+    "#Rifitto su tutto il training set\n",
+    "best_model = neighbors.KNeighborsClassifier(n_neighbors=1).fit(np.vstack([X_tr, X_val]),\n",
+    "                                                               np.hstack([y_tr, y_val]))\n",
+    "\n",
+    "#Valuto accuratezza del miglior modello sul test set\n",
+    "print('Test accuracy with selected k: {:.2f}'.format(best_model.score(X_test, y_test))) "
    ]
   },
   {
