aggiunti argomenti a lezione 7

--- a/7. Scikit-learn.ipynb
+++ b/7. Scikit-learn.ipynb
@@ -14,7 +14,10 @@
     "        - [Esercizio 3](#Esercizio-3)\n",
     "    - [Dai dati alla predizione in quindici righe](#Dai-dati-alla-predizione-in-quindici-righe)\n",
     "    - [Alberi di decisione](#Alberi-di-decisione)\n",
-    "    - [Regressione](#Regressione)"
+    "    - [Regressione](#Regressione)\n",
+    "        - [Metriche](#Metriche)\n",
+    "        - [Overfitting](#Overfitting)\n",
+    "    - [Metodi ensemble](#Metodi-ensemble)"
    ]
   },
   {
@@ -1091,14 +1094,341 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---"
+    "Regressione\n",
+    "---\n",
+    "In un task di *regressione*, le etichette da apprendere sono valori numerici continui. Scikit-learn fornisce le implementazioni dei modelli KNN e DT per la regressione:\n",
+    "\n",
+    "- http://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsRegressor.html\n",
+    "- http://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeRegressor.html\n",
+    "\n",
+    "La struttura degli modelli è molto simile a quella vista per la classificazione. Vediamo un esempio di regressione sul dataset *boston housing*: https://www.cs.toronto.edu/~delve/data/boston/bostonDetail.html."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_boston\n",
+    "\n",
+    "boston = load_boston()\n",
+    "X, y = boston['data'], boston['target']\n",
+    "\n",
+    "print(y.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['CRIM', 0.00632, 88.9762],\n",
+       " ['ZN', 0.0, 100.0],\n",
+       " ['INDUS', 0.46, 27.74],\n",
+       " ['CHAS', 0.0, 1.0],\n",
+       " ['NOX', 0.385, 0.871],\n",
+       " ['RM', 3.561, 8.78],\n",
+       " ['AGE', 2.9, 100.0],\n",
+       " ['DIS', 1.1296, 12.1265],\n",
+       " ['RAD', 1.0, 24.0],\n",
+       " ['TAX', 187.0, 711.0],\n",
+       " ['PTRATIO', 12.6, 22.0],\n",
+       " ['B', 0.32, 396.9],\n",
+       " ['LSTAT', 1.73, 37.97]]"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "[[boston['feature_names'][feat],\n",
+    "  np.min(X[:, feat]),\n",
+    "  np.max(X[:, feat])] for feat in range(X.shape[1])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(354, 13), (152, 13), (354,), (152,)]"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.3, random_state=0)#schema base di validazione\n",
+    "\n",
+    "[s.shape for s in [X_train, X_test, y_train, y_test]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['CRIM', 0.0, 1.0],\n",
+       " ['ZN', 0.0, 1.0],\n",
+       " ['INDUS', 0.0, 1.0],\n",
+       " ['CHAS', 0.0, 1.0],\n",
+       " ['NOX', 0.0, 0.9999999999999999],\n",
+       " ['RM', 0.0, 0.9999999999999999],\n",
+       " ['AGE', 0.0, 1.0],\n",
+       " ['DIS', 0.0, 0.9999999999999999],\n",
+       " ['RAD', 0.0, 1.0],\n",
+       " ['TAX', 0.0, 1.0],\n",
+       " ['PTRATIO', 0.0, 1.0],\n",
+       " ['B', 0.0, 0.9999999999999999],\n",
+       " ['LSTAT', 0.0, 0.9999999999999998]]"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "scaler = MinMaxScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "[[boston['feature_names'][feat],\n",
+    "  np.min(X_train[:, feat]),\n",
+    "  np.max(X_train[:, feat])] for feat in range(X_train.shape[1])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Goodness of fit on test set: 0.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsRegressor as KNN\n",
+    "\n",
+    "model = KNN(n_neighbors=2)\n",
+    "model.fit(X_train, y_train)\n",
+    "print('Goodness of fit on test set: {:.2f}'.format(model.score(X_test, y_test)))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nella lezione successiva useremo molte altre implementazioni sklearn di modelli di apprendimento. Utilizzeremo la libreria introdotta in questa lezione insieme ad altri strumenti Python per il machine learning."
+    "### Metriche"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Che valore è 0.67? Ciascun task ha uno *scorer* di default. Nel caso della classificazione il punteggio di un modello indica la sua accuratezza. Per quanto riguarda la regressione, la metrica di default è il *Coefficient of determination* ($R^2$): https://en.wikipedia.org/wiki/Coefficient_of_determination.\n",
+    "\n",
+    "Se vogliamo utilizzare una metrica diversa, possiamo usare il modulo *metrics*: http://scikit-learn.org/stable/modules/classes.html#module-sklearn.metrics.\n",
+    "\n",
+    "Usiamo ad esempio il *mean absolute error* (MAE)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE on test set: 3.31\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error as MAE\n",
+    "\n",
+    "mae = MAE(y_test, model.predict(X_test))\n",
+    "print('MAE on test set: {:.2f}'.format(mae))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overfitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Diabetes dataset\n",
+      "================\n",
+      "\n",
+      "Notes\n",
+      "-----\n",
+      "\n",
+      "Ten baseline variables, age, sex, body mass index, average blood\n",
+      "pressure, and six blood serum measurements were obtained for each of n =\n",
+      "442 diabetes patients, as well as the response of interest, a\n",
+      "quantitative measure of disease progression one year after baseline.\n",
+      "\n",
+      "Data Set Characteristics:\n",
+      "\n",
+      "  :Number of Instances: 442\n",
+      "\n",
+      "  :Number of Attributes: First 10 columns are numeric predictive values\n",
+      "\n",
+      "  :Target: Column 11 is a quantitative measure of disease progression one year after baseline\n",
+      "\n",
+      "  :Attributes:\n",
+      "    :Age:\n",
+      "    :Sex:\n",
+      "    :Body mass index:\n",
+      "    :Average blood pressure:\n",
+      "    :S1:\n",
+      "    :S2:\n",
+      "    :S3:\n",
+      "    :S4:\n",
+      "    :S5:\n",
+      "    :S6:\n",
+      "\n",
+      "Note: Each of these 10 feature variables have been mean centered and scaled by the standard deviation times `n_samples` (i.e. the sum of squares of each column totals 1).\n",
+      "\n",
+      "Source URL:\n",
+      "http://www4.stat.ncsu.edu/~boos/var.select/diabetes.html\n",
+      "\n",
+      "For more information see:\n",
+      "Bradley Efron, Trevor Hastie, Iain Johnstone and Robert Tibshirani (2004) \"Least Angle Regression,\" Annals of Statistics (with discussion), 407-499.\n",
+      "(http://web.stanford.edu/~hastie/Papers/LARS/LeastAngle_2002.pdf)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import load_diabetes\n",
+    "\n",
+    "diabetes = load_diabetes()\n",
+    "print(diabetes['DESCR'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(diabetes['target'].dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE on training/test set: 1.00/-0.30\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor as DT\n",
+    "\n",
+    "X, y = diabetes['data'], diabetes['target']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.3, random_state=0)\n",
+    "\n",
+    "model = DT(max_depth=None)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "print('MAE on training/test set: {:.2f}/{:.2f}'.format(model.score(X_train, y_train),\n",
+    "                                                       model.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validated max_depth: 2\n",
+      "\n",
+      "MAE on training/test set: 0.49/0.21\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV as KCV\n",
+    "\n",
+    "kcv = KCV(DT(),\n",
+    "          param_grid=[{'max_depth':[2,3,5,10,20,50,None]}],\n",
+    "          cv=5).fit(X_train, y_train)\n",
+    "\n",
+    "best_model = kcv.best_estimator_\n",
+    "\n",
+    "print('Validated max_depth:', best_model.max_depth)\n",
+    "print('\\nMAE on training/test set: {:.2f}/{:.2f}'.format(best_model.score(X_train, y_train),\n",
+    "                                                       best_model.score(X_test, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Metodi ensemble\n",
+    "---"
    ]
   },
   {
